--- a/index.html
+++ b/index.html
@@ -9,102 +9,99 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous" defer></script>
+    <script src="script.js" defer></script>
 </head>
 
-<body>
+<body class="bg-dark">
     <!-- NAV Bar -->
-    <nav class="navbar navbar-expand bg-dark navbar-dark">
+    <!-- <nav class="navbar navbar-expand bg-dark navbar-dark">
         <div class="container-fluid justify-content-center">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="#" class="nav-link active">HOME</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">PERKS</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">GUIDE</a>
+                    <a href="#" class="nav-link active">Gunslinger</a>
                 </li>
             </ul>
         </div>
-    </nav>
+    </nav> -->
 
     <!-- BODY Content -->
-    <table class="table table-borderless my-5 table-dark">
+    <table class="table table-borderless p-2 mt-5 table-dark">
         <tbody>
-            <tr class="text-center">
-                <td colspan="13" class="h1 text-start ps-5">GUNSLINGER</td>
+            <tr>
+                <td><img src="images/gs_a1.png" class="img-fluid" id="gsa1"></td>
+                <td><img src="images/gs_b1.png" class="img-fluid" id="gsb1"></td>
+                <td><img src="images/gs_c1.png" class="img-fluid" id="gsc1"></td>
+                <td><img src="images/gs_d1.png" class="img-fluid" id="gsd1"></td>
+                <td><img src="images/gs_e1.png" class="img-fluid" id="gse1"></td>
+                <td><img src="images/gs_f1.png" class="img-fluid" id="gsf1"></td>
+                <td><img src="images/gs_g1.png" class="img-fluid" id="gsg1"></td>
+                <td><img src="images/gs_h1.png" class="img-fluid" id="gsh1"></td>
+                <td><img src="images/gs_i1.png" class="img-fluid" id="gsi1"></td>
+                <td><img src="images/gs_j1.png" class="img-fluid" id="gsj1"></td>
+                <td><img src="images/gs_k1.png" class="img-fluid" id="gsk1"></td>
+                <td><img src="images/gs_l1.png" class="img-fluid" id="gsl1"></td>
+                <td><img src="images/gs_m1.png" class="img-fluid" id="gsm1"></td>
             </tr>
             <tr>
-                <td><img src="images/gs_a1.png" class="img-fluid"></td>
-                <td><img src="images/gs_b1.png" class="img-fluid"></td>
-                <td><img src="images/gs_c1.png" class="img-fluid"></td>
-                <td><img src="images/gs_d1.png" class="img-fluid"></td>
-                <td><img src="images/gs_e1.png" class="img-fluid"></td>
-                <td><img src="images/gs_f1.png" class="img-fluid"></td>
-                <td><img src="images/gs_g1.png" class="img-fluid"></td>
-                <td><img src="images/gs_h1.png" class="img-fluid"></td>
-                <td><img src="images/gs_i1.png" class="img-fluid"></td>
-                <td><img src="images/gs_j1.png" class="img-fluid"></td>
-                <td><img src="images/gs_k1.png" class="img-fluid"></td>
-                <td><img src="images/gs_l1.png" class="img-fluid"></td>
-                <td><img src="images/gs_m1.png" class="img-fluid"></td>
-            </tr>
-            <tr>
-                <td><img src="images/gs_a2.png" class="img-fluid"></td>
-                <td><img src="images/gs_b2.png" class="img-fluid"></td>
-                <td><img src="images/gs_c2.png" class="img-fluid"></td>
-                <td><img src="images/gs_d2.png" class="img-fluid"></td>
-                <td><img src="images/gs_e2.png" class="img-fluid"></td>
-                <td><img src="images/gs_f2.png" class="img-fluid"></td>
-                <td><img src="images/gs_g2.png" class="img-fluid"></td>
-                <td><img src="images/gs_h2.png" class="img-fluid"></td>
-                <td><img src="images/gs_i2.png" class="img-fluid"></td>
-                <td><img src="images/gs_j2.png" class="img-fluid"></td>
-                <td><img src="images/gs_k2.png" class="img-fluid"></td>
-                <td><img src="images/gs_l2.png" class="img-fluid"></td>
-                <td><img src="images/gs_m2.png" class="img-fluid"></td>
+                <td><img src="images/gs_a2.png" class="img-fluid" id="gsa2"></td>
+                <td><img src="images/gs_b2.png" class="img-fluid" id="gsb2"></td>
+                <td><img src="images/gs_c2.png" class="img-fluid" id="gsc2"></td>
+                <td><img src="images/gs_d2.png" class="img-fluid" id="gsd2"></td>
+                <td><img src="images/gs_e2.png" class="img-fluid" id="gse2"></td>
+                <td><img src="images/gs_f2.png" class="img-fluid" id="gsf2"></td>
+                <td><img src="images/gs_g2.png" class="img-fluid" id="gsg2"></td>
+                <td><img src="images/gs_h2.png" class="img-fluid" id="gsh2"></td>
+                <td><img src="images/gs_i2.png" class="img-fluid" id="gsi2"></td>
+                <td><img src="images/gs_j2.png" class="img-fluid" id="gsj2"></td>
+                <td><img src="images/gs_k2.png" class="img-fluid" id="gsk2"></td>
+                <td><img src="images/gs_l2.png" class="img-fluid" id="gsl2"></td>
+                <td><img src="images/gs_m2.png" class="img-fluid" id="gsm2"></td>
             </tr>
             <tr>
                 <td></td>
-                <td><img src="images/gs_b3.png" class="img-fluid"></td>
-                <td><img src="images/gs_c3.png" class="img-fluid"></td>
-                <td><img src="images/gs_d3.png" class="img-fluid"></td>
+                <td><img src="images/gs_b3.png" class="img-fluid" id="gsb3"></td>
+                <td><img src="images/gs_c3.png" class="img-fluid" id="gsc3"></td>
+                <td><img src="images/gs_d3.png" class="img-fluid" id="gsd3"></td>
                 <td></td>
-                <td><img src="images/gs_f3.png" class="img-fluid"></td>
-                <td><img src="images/gs_g3.png" class="img-fluid"></td>
-                <td><img src="images/gs_h3.png" class="img-fluid"></td>
+                <td><img src="images/gs_f3.png" class="img-fluid" id="gsf3"></td>
+                <td><img src="images/gs_g3.png" class="img-fluid" id="gsg3"></td>
+                <td><img src="images/gs_h3.png" class="img-fluid" id="gsh3"></td>
                 <td></td>
-                <td><img src="images/gs_j3.png" class="img-fluid"></td>
-                <td><img src="images/gs_k3.png" class="img-fluid"></td>
-                <td><img src="images/gs_l3.png" class="img-fluid"></td>
+                <td><img src="images/gs_j3.png" class="img-fluid" id="gsj3"></td>
+                <td><img src="images/gs_k3.png" class="img-fluid" id="gsk3"></td>
+                <td><img src="images/gs_l3.png" class="img-fluid" id="gsl3"></td>
                 <td></td>
             </tr>
             <tr>
                 <td></td>
-                <td><img src="images/gs_b4.png" class="img-fluid"></td>
-                <td><img src="images/gs_c4.png" class="img-fluid"></td>
-                <td><img src="images/gs_d4.png" class="img-fluid"></td>
+                <td><img src="images/gs_b4.png" class="img-fluid" id="gsb4"></td>
+                <td><img src="images/gs_c4.png" class="img-fluid" id="gsc4"></td>
+                <td><img src="images/gs_d4.png" class="img-fluid" id="gsd4"></td>
                 <td></td>
-                <td><img src="images/gs_f4.png" class="img-fluid"></td>
-                <td><img src="images/gs_g4.png" class="img-fluid"></td>
-                <td><img src="images/gs_h4.png" class="img-fluid"></td>
+                <td><img src="images/gs_f4.png" class="img-fluid" id="gsf4"></td>
+                <td><img src="images/gs_g4.png" class="img-fluid" id="gsg4"></td>
+                <td><img src="images/gs_h4.png" class="img-fluid" id="gsh4"></td>
                 <td></td>
-                <td><img src="images/gs_j4.png" class="img-fluid"></td>
-                <td><img src="images/gs_k4.png" class="img-fluid"></td>
-                <td><img src="images/gs_l4.png" class="img-fluid"></td>
+                <td><img src="images/gs_j4.png" class="img-fluid" id="gsj4"></td>
+                <td><img src="images/gs_k4.png" class="img-fluid" id="gsk4"></td>
+                <td><img src="images/gs_l4.png" class="img-fluid" id="gsl4"></td>
                 <td></td>
             </tr>
-
-
         </tbody>
     </table>
 
-    <footer class="py-3 mt-5 mb-3">
+    <div class="card my-4 mx-5 text-center bg-warning rounded-5">
+        <div class="card-body">
+          <h5 class="card-title perk-name"></h5>
+          <p class="card-text perk-info"></p>
+        </div>
+      </div>
+
+    <footer class="mt-5 mb-1">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Homepage</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link px-2 text-light">Gunslinger</a></li>
         </ul>
-        <p class="text-center text-body-secondary">© 2023 CapriceYuri</p>
+        <p class="text-center text-light">© 2023 CapriceYuri</p>
     </footer>
 
 </body>
