--- a/index.html
+++ b/index.html
@@ -92,18 +92,18 @@
         </table>
     </div>
 
-    <div class="card my-3 mx-5 text-center bg-warning rounded-5">
+    <div class="card m-2 mx-5 text-center bg-warning rounded-5">
         <div class="card-body">
             <h5 class="card-title perk-name"></h5>
             <p class="card-text perk-info"></p>
         </div>
     </div>
 
-    <footer class="mt-3 mb-1">
-        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item"><a href="index.html" class="nav-link px-2 text-light">Gunslinger</a></li>
+    <footer class="m-1">
+        <ul class="nav justify-content-center border-bottom mb-1">
+            <li class="nav-item"><a href="index.html" class="nav-link text-light">Gunslinger</a></li>
         </ul>
-        <p class="text-center text-light">© 2023 CapriceYuri</p>
+        <p class="text-center text-light mb-0">© 2023 CapriceYuri</p>
     </footer>
 
 </body>
