--- a/index.html
+++ b/index.html
@@ -10,23 +10,24 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous" defer></script>
     <script src="script.js" defer></script>
+    <script src="https://kit.fontawesome.com/852e8a85e4.js" crossorigin="anonymous" defer></script>
 </head>
 
-<body class="bg-dark">
+<body>
     <!-- NAV Bar -->
     <!-- <nav class="navbar navbar-expand bg-dark navbar-dark">
         <div class="container-fluid justify-content-center">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="#" class="nav-link active">Gunslinger</a>
+                    <a href="#" class="nav-link active">GUNSLINGER</a>
                 </li>
             </ul>
         </div>
     </nav> -->
 
     <!-- BODY Content -->
-    <div class="table-responsive">
-        <table class="table table-borderless p-2 mt-3 table-dark overflow-x-auto">
+    <div class="table-responsive p-4 overflow-x-auto">
+        <table class="table table-borderless mt-3">
             <tbody>
                 <tr>
                     <td><img src="images/gs_a1.png" class="img-fluid" id="gsa1"></td>
@@ -92,7 +93,7 @@
         </table>
     </div>
 
-    <div class="card m-2 mx-5 text-center bg-warning rounded-5">
+    <div class="card m-2 mx-5 text-center border-0 transparent text-light">
         <div class="card-body">
             <h5 class="card-title perk-name"></h5>
             <p class="card-text perk-info"></p>
@@ -101,7 +102,7 @@
 
     <footer class="m-1">
         <ul class="nav justify-content-center border-bottom mb-1">
-            <li class="nav-item"><a href="index.html" class="nav-link text-light">Gunslinger</a></li>
+            <!-- <li class="nav-item"><a href="index.html" class="nav-link text-light">Gunslinger</a></li> -->
         </ul>
         <p class="text-center text-light mb-0">© 2023 CapriceYuri</p>
     </footer>
