--- a/index.html
+++ b/index.html
@@ -93,15 +93,37 @@
         </table>
     </div>
 
-    <div class="card m-2 mx-5 text-center border-0 transparent text-light">
+    <div class="card mx-5 text-center border-0 transparent text-light">
         <div class="card-body">
             <h5 class="card-title perk-name"></h5>
             <p class="card-text perk-info"></p>
         </div>
     </div>
 
-    <footer class="m-1">
-        <ul class="nav justify-content-center border-bottom mb-1">
+<!-- 
+    <div class="container text-center">
+        <div class="row mx-5 my-5">
+            <div class="col-sm-6 mb-3 mb-sm-0">
+                <div class="card transparent text-light">
+                    <div class="card-body">
+                        <h5 class="card-title">Special title treatment</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="card transparent text-light">
+                    <div class="card-body">
+                        <h5 class="card-title">Special title treatment</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
+
+    <footer class="">
+        <ul class="nav justify-content-center border-bottom">
             <!-- <li class="nav-item"><a href="index.html" class="nav-link text-light">Gunslinger</a></li> -->
         </ul>
         <p class="text-center text-light mb-0">© 2023 CapriceYuri</p>
