--- a/index.html
+++ b/index.html
@@ -15,18 +15,43 @@
 
 <body>
     <!-- NAV Bar -->
-    <!-- <nav class="navbar navbar-expand bg-dark navbar-dark">
-        <div class="container-fluid justify-content-center">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a href="#" class="nav-link active">GUNSLINGER</a>
-                </li>
-            </ul>
+    <nav class="navbar bg-dark">
+        <div class="container navbar-dark justify-content-center">
+            <button class="btn btn-secondary btn-lg" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcan" aria-controls="offcanvasExample">
+                <div class="navbar-toggler-icon"></div>
+            </button>
         </div>
-    </nav> -->
+    </nav>
+
+    <div class="offcanvas offcanvas-start bg-dark" tabindex="-1" id="offcan" aria-labelledby="offcanLabel" data-bs-scroll="true">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title text-light" id="offcan">MAIN MENU</h5>
+            <button type="button" class="btn-close bg-light" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+
+        <div class="offcanvas-body">
+            <div class="list-group rounded-5 text-center">
+                <a href="#" class="list-group-item list-group-item-action list-group-item-dark active" aria-current="true">Gunslinger</a>
+                <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Hellraiser</a>
+                <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Medic</a>
+                <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Fixer</a>
+                <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Slasher</a>
+                <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Exterminator</a>
+                <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Drone Master</a>
+                <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Vanguard</a>
+            </div>
+
+            <div class="list-group list-group-flush rounded-5 mt-5 text-center">
+                <a href="https://wwzgame.com/" target="_blank" class="list-group-item list-group-item-action list-group-item-dark">OFFICIAL PAGE</a>
+                <a href="https://www.reddit.com/r/worldwarzthegame/" target="_blank" class="list-group-item list-group-item-action list-group-item-dark">REDDIT</a>
+                <a href="https://support.saber.games/hc/en-us" target="_blank" class="list-group-item list-group-item-action list-group-item-dark">SUPPORT</a>
+                <a href="https://wwzgame.com/en/buy" target="_blank" class="list-group-item list-group-item-action list-group-item-dark">BUY & PLAY THE GAME</a>
+            </div>
+        </div>
+    </div>
 
     <!-- BODY Content -->
-    <div class="table-responsive p-4 overflow-x-auto">
+    <div class="table-responsive p-4 overflow-x-auto mt-3">
         <table class="table table-borderless mt-3">
             <tbody>
                 <tr>
@@ -95,36 +120,21 @@
 
     <div class="card mx-5 text-center border-0 transparent text-light">
         <div class="card-body">
-            <h5 class="card-title perk-name"></h5>
-            <p class="card-text perk-info"></p>
+            <h5 class="card-title perk-name fw-bolder h3"></h5>
+            <p class="card-text perk-info fw-bold h5"></p>
         </div>
     </div>
 
-<!-- 
-    <div class="container text-center">
-        <div class="row mx-5 my-5">
-            <div class="col-sm-6 mb-3 mb-sm-0">
-                <div class="card transparent text-light">
-                    <div class="card-body">
-                        <h5 class="card-title">Special title treatment</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="card transparent text-light">
-                    <div class="card-body">
-                        <h5 class="card-title">Special title treatment</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
-
-    <footer class="">
-        <ul class="nav justify-content-center border-bottom">
-            <!-- <li class="nav-item"><a href="index.html" class="nav-link text-light">Gunslinger</a></li> -->
+    <footer class="my-2">
+        <ul class="nav justify-content-center border-bottom my-2">
+            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="/images/gs_icon.png" alt="GUNSLINGER"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="/images/hr_icon.png" alt="HELLRAISER"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="/images/m_icon.png" alt="MEDIC"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="/images/f_icon.png" alt="FIXER"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="/images/s_icon.png" alt="SLASHER"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="/images/ex_icon.png" alt="EXTERMINATOR"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="/images/dm_icon.png" alt="DRONEMASTER"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="/images/vg_icon.png" alt="VANGUARD"></a></li>
         </ul>
         <p class="text-center text-light mb-0">© 2023 CapriceYuri</p>
     </footer>
