--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
 
     <footer class="my-2">
         <ul class="nav justify-content-center border-bottom my-2">
-            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="/images/gs_icon.png" alt="GUNSLINGER"></a></li>
-            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="/images/hr_icon.png" alt="HELLRAISER"></a></li>
-            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="/images/m_icon.png" alt="MEDIC"></a></li>
-            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="/images/f_icon.png" alt="FIXER"></a></li>
-            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="/images/s_icon.png" alt="SLASHER"></a></li>
-            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="/images/ex_icon.png" alt="EXTERMINATOR"></a></li>
-            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="/images/dm_icon.png" alt="DRONEMASTER"></a></li>
-            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="/images/vg_icon.png" alt="VANGUARD"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="./images/gs_icon.png" alt="GUNSLINGER"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="./images/hr_icon.png" alt="HELLRAISER"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="./images/m_icon.png" alt="MEDIC"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="./images/f_icon.png" alt="FIXER"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="./images/s_icon.png" alt="SLASHER"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="./images/ex_icon.png" alt="EXTERMINATOR"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="./images/dm_icon.png" alt="DRONEMASTER"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="./images/vg_icon.png" alt="VANGUARD"></a></li>
         </ul>
         <p class="text-center text-light mb-0">© 2023 CapriceYuri</p>
     </footer>
