--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>World War Z: Aftermath</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous" defer></script>
+    <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <script src="https://kit.fontawesome.com/852e8a85e4.js" crossorigin="anonymous" defer></script>
 </head>
@@ -16,43 +16,52 @@
 <body>
     <!-- NAV Bar -->
     <nav class="navbar bg-dark">
-        <div class="container navbar-dark justify-content-center">
-            <button class="btn btn-secondary btn-lg" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcan" aria-controls="offcanvasExample">
+        <div class="container navbar-dark justify-content-start">
+            <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcan" aria-controls="offcanvasExample">
                 <div class="navbar-toggler-icon"></div>
             </button>
         </div>
     </nav>
 
-    <div class="offcanvas offcanvas-start bg-dark" tabindex="-1" id="offcan" aria-labelledby="offcanLabel" data-bs-scroll="true">
-        <div class="offcanvas-header">
-            <h5 class="offcanvas-title text-light" id="offcan">MAIN MENU</h5>
+    <div class="offcanvas offcanvas-start text-bg-dark" tabindex="-1" id="offcan" aria-labelledby="offcanLabel" data-bs-scroll="true">
+        <div class="offcanvas-header justify-content-center my-2">
+            <h2 class="offcanvas-title me-5">CLASSES</h2>
             <button type="button" class="btn-close bg-light" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
 
         <div class="offcanvas-body">
-            <div class="list-group rounded-5 text-center">
-                <a href="#" class="list-group-item list-group-item-action list-group-item-dark active" aria-current="true">Gunslinger</a>
-                <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Hellraiser</a>
-                <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Medic</a>
-                <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Fixer</a>
-                <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Slasher</a>
-                <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Exterminator</a>
-                <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Drone Master</a>
-                <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Vanguard</a>
-            </div>
-
-            <div class="list-group list-group-flush rounded-5 mt-5 text-center">
-                <a href="https://wwzgame.com/" target="_blank" class="list-group-item list-group-item-action list-group-item-dark">OFFICIAL PAGE</a>
-                <a href="https://www.reddit.com/r/worldwarzthegame/" target="_blank" class="list-group-item list-group-item-action list-group-item-dark">REDDIT</a>
-                <a href="https://support.saber.games/hc/en-us" target="_blank" class="list-group-item list-group-item-action list-group-item-dark">SUPPORT</a>
-                <a href="https://wwzgame.com/en/buy" target="_blank" class="list-group-item list-group-item-action list-group-item-dark">BUY & PLAY THE GAME</a>
-            </div>
+            <ul class="nav flex-column rounded-4 ms-5">
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fa-solid fa-gun"></i> Gunslinger</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fa-solid fa-explosion"></i> Hellraiser</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fa-solid fa-suitcase-medical"></i> Medic</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fa-solid fa-screwdriver-wrench"></i> Fixer</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fa-solid fa-scissors"></i> Slasher</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fa-solid fa-mask"></i> Exterminator</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fa-solid fa-robot"></i> Drone Master</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fa-solid fa-shield-halved"></i> Vanguard</a>
+                </li>
+            </ul>
         </div>
     </div>
 
     <!-- BODY Content -->
-    <div class="table-responsive p-4 overflow-x-auto mt-3">
-        <table class="table table-borderless mt-3">
+    <div class="container p-0">
+        <table class="table table-borderless overflow-x-auto">
             <tbody>
                 <tr>
                     <td><img src="images/gs_a1.png" class="img-fluid" id="gsa1"></td>
@@ -120,21 +129,21 @@
 
     <div class="card mx-5 text-center border-0 transparent text-light">
         <div class="card-body">
-            <h5 class="card-title perk-name fw-bolder h3"></h5>
-            <p class="card-text perk-info fw-bold h5"></p>
+            <h5 class="card-title perk-name"></h5>
+            <div class="card-text perk-info"></div>
         </div>
     </div>
 
     <footer class="my-2">
-        <ul class="nav justify-content-center border-bottom my-2">
-            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="./images/gs_icon.png" alt="GUNSLINGER"></a></li>
-            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="./images/hr_icon.png" alt="HELLRAISER"></a></li>
-            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="./images/m_icon.png" alt="MEDIC"></a></li>
-            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="./images/f_icon.png" alt="FIXER"></a></li>
-            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="./images/s_icon.png" alt="SLASHER"></a></li>
-            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="./images/ex_icon.png" alt="EXTERMINATOR"></a></li>
-            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="./images/dm_icon.png" alt="DRONEMASTER"></a></li>
-            <li class="nav-item"><a href="#" class="nav-link text-light"><img src="./images/vg_icon.png" alt="VANGUARD"></a></li>
+        <ul class="nav justify-content-center my-2">
+            <li class="nav-item"><a href="#" class="nav-link text-light p-2"><img src="./images/gs_icon.png" alt="GUNSLINGER"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-light p-2"><img src="./images/hr_icon.png" alt="HELLRAISER"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-light p-2"><img src="./images/m_icon.png" alt="MEDIC"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-light p-2"><img src="./images/f_icon.png" alt="FIXER"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-light p-2"><img src="./images/s_icon.png" alt="SLASHER"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-light p-2"><img src="./images/ex_icon.png" alt="EXTERMINATOR"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-light p-2"><img src="./images/dm_icon.png" alt="DRONEMASTER"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-light p-2"><img src="./images/vg_icon.png" alt="VANGUARD"></a></li>
         </ul>
         <p class="text-center text-light mb-0">© 2023 CapriceYuri</p>
     </footer>
