--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
 
     <!-- BODY Content -->
-    <div class="container p-0">
+    <div class="container p-0 my-5">
         <table class="table table-borderless overflow-x-auto">
             <tbody>
                 <tr>
@@ -127,9 +127,9 @@
         </table>
     </div>
 
-    <div class="card mx-5 text-center border-0 transparent text-light">
-        <div class="card-body">
-            <h5 class="card-title perk-name"></h5>
+    <div class="card mx-5 text-center border-0 transparent text-light shadow">
+        <div class="card-body my-2">
+            <h5 class="card-title perk-name m-0"></h5>
             <div class="card-text perk-info"></div>
         </div>
     </div>
