--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcan" aria-controls="offcanvasExample">
                 <div class="navbar-toggler-icon"></div>
             </button>
+            <div class="navbar-brand ms-5">GUNSLINGER</div>
         </div>
     </nav>
 
