--- a/hr.html
+++ b/hr.html
@@ -20,7 +20,7 @@
             <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcan" aria-controls="offcanvasExample">
                 <div class="navbar-toggler-icon"></div>
             </button>
-            <div class="navbar-brand ms-5">GUNSLINGER</div>
+            <div class="navbar-brand ms-5">HELLRAISER</div>
         </div>
     </nav>
 
@@ -65,63 +65,63 @@
         <table class="table table-borderless overflow-x-auto">
             <tbody>
                 <tr>
-                    <td><img src="images/gs_a1.png" class="img-fluid" id="gsa1"></td>
-                    <td><img src="images/gs_b1.png" class="img-fluid" id="gsb1"></td>
-                    <td><img src="images/gs_c1.png" class="img-fluid" id="gsc1"></td>
-                    <td><img src="images/gs_d1.png" class="img-fluid" id="gsd1"></td>
-                    <td><img src="images/gs_e1.png" class="img-fluid" id="gse1"></td>
-                    <td><img src="images/gs_f1.png" class="img-fluid" id="gsf1"></td>
-                    <td><img src="images/gs_g1.png" class="img-fluid" id="gsg1"></td>
-                    <td><img src="images/gs_h1.png" class="img-fluid" id="gsh1"></td>
-                    <td><img src="images/gs_i1.png" class="img-fluid" id="gsi1"></td>
-                    <td><img src="images/gs_j1.png" class="img-fluid" id="gsj1"></td>
-                    <td><img src="images/gs_k1.png" class="img-fluid" id="gsk1"></td>
-                    <td><img src="images/gs_l1.png" class="img-fluid" id="gsl1"></td>
-                    <td><img src="images/gs_m1.png" class="img-fluid" id="gsm1"></td>
+                    <td><img src="images/hr_a1.png" class="img-fluid" id="hra1"></td>
+                    <td><img src="images/hr_b1.png" class="img-fluid" id="hrb1"></td>
+                    <td><img src="images/hr_c1.png" class="img-fluid" id="hrc1"></td>
+                    <td><img src="images/hr_d1.png" class="img-fluid" id="hrd1"></td>
+                    <td><img src="images/hr_e1.png" class="img-fluid" id="hre1"></td>
+                    <td><img src="images/hr_f1.png" class="img-fluid" id="hrf1"></td>
+                    <td><img src="images/hr_g1.png" class="img-fluid" id="hrg1"></td>
+                    <td><img src="images/hr_h1.png" class="img-fluid" id="hrh1"></td>
+                    <td><img src="images/hr_i1.png" class="img-fluid" id="hri1"></td>
+                    <td><img src="images/hr_j1.png" class="img-fluid" id="hrj1"></td>
+                    <td><img src="images/hr_k1.png" class="img-fluid" id="hrk1"></td>
+                    <td><img src="images/hr_l1.png" class="img-fluid" id="hrl1"></td>
+                    <td><img src="images/hr_m1.png" class="img-fluid" id="hrm1"></td>
                 </tr>
                 <tr>
-                    <td><img src="images/gs_a2.png" class="img-fluid" id="gsa2"></td>
-                    <td><img src="images/gs_b2.png" class="img-fluid" id="gsb2"></td>
-                    <td><img src="images/gs_c2.png" class="img-fluid" id="gsc2"></td>
-                    <td><img src="images/gs_d2.png" class="img-fluid" id="gsd2"></td>
-                    <td><img src="images/gs_e2.png" class="img-fluid" id="gse2"></td>
-                    <td><img src="images/gs_f2.png" class="img-fluid" id="gsf2"></td>
-                    <td><img src="images/gs_g2.png" class="img-fluid" id="gsg2"></td>
-                    <td><img src="images/gs_h2.png" class="img-fluid" id="gsh2"></td>
-                    <td><img src="images/gs_i2.png" class="img-fluid" id="gsi2"></td>
-                    <td><img src="images/gs_j2.png" class="img-fluid" id="gsj2"></td>
-                    <td><img src="images/gs_k2.png" class="img-fluid" id="gsk2"></td>
-                    <td><img src="images/gs_l2.png" class="img-fluid" id="gsl2"></td>
-                    <td><img src="images/gs_m2.png" class="img-fluid" id="gsm2"></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td><img src="images/gs_b3.png" class="img-fluid" id="gsb3"></td>
-                    <td><img src="images/gs_c3.png" class="img-fluid" id="gsc3"></td>
-                    <td><img src="images/gs_d3.png" class="img-fluid" id="gsd3"></td>
-                    <td></td>
-                    <td><img src="images/gs_f3.png" class="img-fluid" id="gsf3"></td>
-                    <td><img src="images/gs_g3.png" class="img-fluid" id="gsg3"></td>
-                    <td><img src="images/gs_h3.png" class="img-fluid" id="gsh3"></td>
-                    <td></td>
-                    <td><img src="images/gs_j3.png" class="img-fluid" id="gsj3"></td>
-                    <td><img src="images/gs_k3.png" class="img-fluid" id="gsk3"></td>
-                    <td><img src="images/gs_l3.png" class="img-fluid" id="gsl3"></td>
-                    <td></td>
+                    <td><img src="images/hr_a2.png" class="img-fluid" id="hra2"></td>
+                    <td><img src="images/hr_b2.png" class="img-fluid" id="hrb2"></td>
+                    <td><img src="images/hr_c2.png" class="img-fluid" id="hrc2"></td>
+                    <td><img src="images/hr_d2.png" class="img-fluid" id="hrd2"></td>
+                    <td><img src="images/hr_e2.png" class="img-fluid" id="hre2"></td>
+                    <td><img src="images/hr_f2.png" class="img-fluid" id="hrf2"></td>
+                    <td><img src="images/hr_g2.png" class="img-fluid" id="hrg2"></td>
+                    <td><img src="images/hr_h2.png" class="img-fluid" id="hrh2"></td>
+                    <td><img src="images/hr_i2.png" class="img-fluid" id="hri2"></td>
+                    <td><img src="images/hr_j2.png" class="img-fluid" id="hrj2"></td>
+                    <td><img src="images/hr_k2.png" class="img-fluid" id="hrk2"></td>
+                    <td><img src="images/hr_l2.png" class="img-fluid" id="hrl2"></td>
+                    <td><img src="images/hr_m2.png" class="img-fluid" id="hrm2"></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><img src="images/gs_b4.png" class="img-fluid" id="gsb4"></td>
-                    <td><img src="images/gs_c4.png" class="img-fluid" id="gsc4"></td>
-                    <td><img src="images/gs_d4.png" class="img-fluid" id="gsd4"></td>
+                    <td><img src="images/hr_b3.png" class="img-fluid" id="hrb3"></td>
+                    <td><img src="images/hr_c3.png" class="img-fluid" id="hrc3"></td>
+                    <td><img src="images/hr_d3.png" class="img-fluid" id="hrd3"></td>
                     <td></td>
-                    <td><img src="images/gs_f4.png" class="img-fluid" id="gsf4"></td>
-                    <td><img src="images/gs_g4.png" class="img-fluid" id="gsg4"></td>
-                    <td><img src="images/gs_h4.png" class="img-fluid" id="gsh4"></td>
+                    <td><img src="images/hr_f3.png" class="img-fluid" id="hrf3"></td>
+                    <td><img src="images/hr_g3.png" class="img-fluid" id="hrg3"></td>
+                    <td><img src="images/hr_h3.png" class="img-fluid" id="hrh3"></td>
                     <td></td>
-                    <td><img src="images/gs_j4.png" class="img-fluid" id="gsj4"></td>
-                    <td><img src="images/gs_k4.png" class="img-fluid" id="gsk4"></td>
-                    <td><img src="images/gs_l4.png" class="img-fluid" id="gsl4"></td>
+                    <td><img src="images/hr_j3.png" class="img-fluid" id="hrj3"></td>
+                    <td><img src="images/hr_k3.png" class="img-fluid" id="hrk3"></td>
+                    <td><img src="images/hr_l3.png" class="img-fluid" id="hrl3"></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><img src="images/hr_b4.png" class="img-fluid" id="hrb4"></td>
+                    <td><img src="images/hr_c4.png" class="img-fluid" id="hrc4"></td>
+                    <td><img src="images/hr_d4.png" class="img-fluid" id="hrd4"></td>
+                    <td></td>
+                    <td><img src="images/hr_f4.png" class="img-fluid" id="hrf4"></td>
+                    <td><img src="images/hr_g4.png" class="img-fluid" id="hrg4"></td>
+                    <td><img src="images/hr_h4.png" class="img-fluid" id="hrh4"></td>
+                    <td></td>
+                    <td><img src="images/hr_j4.png" class="img-fluid" id="hrj4"></td>
+                    <td><img src="images/hr_k4.png" class="img-fluid" id="hrk4"></td>
+                    <td><img src="images/hr_l4.png" class="img-fluid" id="hrl4"></td>
                     <td></td>
                 </tr>
             </tbody>
