Added class Medic, content-completion

--- a/hr.html
+++ b/hr.html
@@ -39,7 +39,7 @@
                     <a class="nav-link" href="hr.html"><i class="fa-solid fa-explosion"></i> Hellraiser</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fa-solid fa-suitcase-medical"></i> Medic</a>
+                    <a class="nav-link" href="m.html"><i class="fa-solid fa-suitcase-medical"></i> Medic</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"><i class="fa-solid fa-screwdriver-wrench"></i> Fixer</a>
@@ -128,7 +128,7 @@
         </table>
     </div>
 
-    <div class="card mx-5 text-center border-0 transparent text-light shadow">
+    <div class="card text-center border-0 transparent text-light shadow">
         <div class="card-body my-2">
             <h5 class="card-title perk-name m-0"></h5>
             <div class="card-text perk-info"></div>
@@ -139,7 +139,7 @@
         <ul class="nav justify-content-center my-2">
             <li class="nav-item"><a href="index.html" class="nav-link text-light p-2"><img src="./images/gs_icon.png" alt="GUNSLINGER"></a></li>
             <li class="nav-item"><a href="hr.html" class="nav-link text-light p-2"><img src="./images/hr_icon.png" alt="HELLRAISER"></a></li>
-            <li class="nav-item"><a href="#" class="nav-link text-light p-2"><img src="./images/m_icon.png" alt="MEDIC"></a></li>
+            <li class="nav-item"><a href="m.html" class="nav-link text-light p-2"><img src="./images/m_icon.png" alt="MEDIC"></a></li>
             <li class="nav-item"><a href="#" class="nav-link text-light p-2"><img src="./images/f_icon.png" alt="FIXER"></a></li>
             <li class="nav-item"><a href="#" class="nav-link text-light p-2"><img src="./images/s_icon.png" alt="SLASHER"></a></li>
             <li class="nav-item"><a href="#" class="nav-link text-light p-2"><img src="./images/ex_icon.png" alt="EXTERMINATOR"></a></li>
