--- a/m.html
+++ b/m.html
@@ -20,7 +20,7 @@
             <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcan" aria-controls="offcanvasExample">
                 <div class="navbar-toggler-icon"></div>
             </button>
-            <div class="navbar-brand ms-5">GUNSLINGER</div>
+            <div class="navbar-brand ms-5">MEDIC</div>
         </div>
     </nav>
 
@@ -65,63 +65,63 @@
         <table class="table table-borderless overflow-x-auto">
             <tbody>
                 <tr>
-                    <td><img src="images/gs_a1.png" class="img-fluid" id="gsa1"></td>
-                    <td><img src="images/gs_b1.png" class="img-fluid" id="gsb1"></td>
-                    <td><img src="images/gs_c1.png" class="img-fluid" id="gsc1"></td>
-                    <td><img src="images/gs_d1.png" class="img-fluid" id="gsd1"></td>
-                    <td><img src="images/gs_e1.png" class="img-fluid" id="gse1"></td>
-                    <td><img src="images/gs_f1.png" class="img-fluid" id="gsf1"></td>
-                    <td><img src="images/gs_g1.png" class="img-fluid" id="gsg1"></td>
-                    <td><img src="images/gs_h1.png" class="img-fluid" id="gsh1"></td>
-                    <td><img src="images/gs_i1.png" class="img-fluid" id="gsi1"></td>
-                    <td><img src="images/gs_j1.png" class="img-fluid" id="gsj1"></td>
-                    <td><img src="images/gs_k1.png" class="img-fluid" id="gsk1"></td>
-                    <td><img src="images/gs_l1.png" class="img-fluid" id="gsl1"></td>
-                    <td><img src="images/gs_m1.png" class="img-fluid" id="gsm1"></td>
+                    <td><img src="images/m_a1.png" class="img-fluid" id="ma1"></td>
+                    <td><img src="images/m_b1.png" class="img-fluid" id="mb1"></td>
+                    <td><img src="images/m_c1.png" class="img-fluid" id="mc1"></td>
+                    <td><img src="images/m_d1.png" class="img-fluid" id="md1"></td>
+                    <td><img src="images/m_e1.png" class="img-fluid" id="me1"></td>
+                    <td><img src="images/m_f1.png" class="img-fluid" id="mf1"></td>
+                    <td><img src="images/m_g1.png" class="img-fluid" id="mg1"></td>
+                    <td><img src="images/m_h1.png" class="img-fluid" id="mh1"></td>
+                    <td><img src="images/m_i1.png" class="img-fluid" id="mi1"></td>
+                    <td><img src="images/m_j1.png" class="img-fluid" id="mj1"></td>
+                    <td><img src="images/m_k1.png" class="img-fluid" id="mk1"></td>
+                    <td><img src="images/m_l1.png" class="img-fluid" id="ml1"></td>
+                    <td><img src="images/m_m1.png" class="img-fluid" id="mm1"></td>
                 </tr>
                 <tr>
-                    <td><img src="images/gs_a2.png" class="img-fluid" id="gsa2"></td>
-                    <td><img src="images/gs_b2.png" class="img-fluid" id="gsb2"></td>
-                    <td><img src="images/gs_c2.png" class="img-fluid" id="gsc2"></td>
-                    <td><img src="images/gs_d2.png" class="img-fluid" id="gsd2"></td>
-                    <td><img src="images/gs_e2.png" class="img-fluid" id="gse2"></td>
-                    <td><img src="images/gs_f2.png" class="img-fluid" id="gsf2"></td>
-                    <td><img src="images/gs_g2.png" class="img-fluid" id="gsg2"></td>
-                    <td><img src="images/gs_h2.png" class="img-fluid" id="gsh2"></td>
-                    <td><img src="images/gs_i2.png" class="img-fluid" id="gsi2"></td>
-                    <td><img src="images/gs_j2.png" class="img-fluid" id="gsj2"></td>
-                    <td><img src="images/gs_k2.png" class="img-fluid" id="gsk2"></td>
-                    <td><img src="images/gs_l2.png" class="img-fluid" id="gsl2"></td>
-                    <td><img src="images/gs_m2.png" class="img-fluid" id="gsm2"></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td><img src="images/gs_b3.png" class="img-fluid" id="gsb3"></td>
-                    <td><img src="images/gs_c3.png" class="img-fluid" id="gsc3"></td>
-                    <td><img src="images/gs_d3.png" class="img-fluid" id="gsd3"></td>
-                    <td></td>
-                    <td><img src="images/gs_f3.png" class="img-fluid" id="gsf3"></td>
-                    <td><img src="images/gs_g3.png" class="img-fluid" id="gsg3"></td>
-                    <td><img src="images/gs_h3.png" class="img-fluid" id="gsh3"></td>
-                    <td></td>
-                    <td><img src="images/gs_j3.png" class="img-fluid" id="gsj3"></td>
-                    <td><img src="images/gs_k3.png" class="img-fluid" id="gsk3"></td>
-                    <td><img src="images/gs_l3.png" class="img-fluid" id="gsl3"></td>
-                    <td></td>
+                    <td><img src="images/m_a2.png" class="img-fluid" id="ma2"></td>
+                    <td><img src="images/m_b2.png" class="img-fluid" id="mb2"></td>
+                    <td><img src="images/m_c2.png" class="img-fluid" id="mc2"></td>
+                    <td><img src="images/m_d2.png" class="img-fluid" id="md2"></td>
+                    <td><img src="images/m_e2.png" class="img-fluid" id="me2"></td>
+                    <td><img src="images/m_f2.png" class="img-fluid" id="mf2"></td>
+                    <td><img src="images/m_g2.png" class="img-fluid" id="mg2"></td>
+                    <td><img src="images/m_h2.png" class="img-fluid" id="mh2"></td>
+                    <td><img src="images/m_i2.png" class="img-fluid" id="mi2"></td>
+                    <td><img src="images/m_j2.png" class="img-fluid" id="mj2"></td>
+                    <td><img src="images/m_k2.png" class="img-fluid" id="mk2"></td>
+                    <td><img src="images/m_l2.png" class="img-fluid" id="ml2"></td>
+                    <td><img src="images/m_m2.png" class="img-fluid" id="mm2"></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><img src="images/gs_b4.png" class="img-fluid" id="gsb4"></td>
-                    <td><img src="images/gs_c4.png" class="img-fluid" id="gsc4"></td>
-                    <td><img src="images/gs_d4.png" class="img-fluid" id="gsd4"></td>
+                    <td><img src="images/m_b3.png" class="img-fluid" id="mb3"></td>
+                    <td><img src="images/m_c3.png" class="img-fluid" id="mc3"></td>
+                    <td><img src="images/m_d3.png" class="img-fluid" id="md3"></td>
                     <td></td>
-                    <td><img src="images/gs_f4.png" class="img-fluid" id="gsf4"></td>
-                    <td><img src="images/gs_g4.png" class="img-fluid" id="gsg4"></td>
-                    <td><img src="images/gs_h4.png" class="img-fluid" id="gsh4"></td>
+                    <td><img src="images/m_f3.png" class="img-fluid" id="mf3"></td>
+                    <td><img src="images/m_g3.png" class="img-fluid" id="mg3"></td>
+                    <td><img src="images/m_h3.png" class="img-fluid" id="mh3"></td>
                     <td></td>
-                    <td><img src="images/gs_j4.png" class="img-fluid" id="gsj4"></td>
-                    <td><img src="images/gs_k4.png" class="img-fluid" id="gsk4"></td>
-                    <td><img src="images/gs_l4.png" class="img-fluid" id="gsl4"></td>
+                    <td><img src="images/m_j3.png" class="img-fluid" id="mj3"></td>
+                    <td><img src="images/m_k3.png" class="img-fluid" id="mk3"></td>
+                    <td><img src="images/m_l3.png" class="img-fluid" id="ml3"></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><img src="images/m_b4.png" class="img-fluid" id="mb4"></td>
+                    <td><img src="images/m_c4.png" class="img-fluid" id="mc4"></td>
+                    <td><img src="images/m_d4.png" class="img-fluid" id="md4"></td>
+                    <td></td>
+                    <td><img src="images/m_f4.png" class="img-fluid" id="mf4"></td>
+                    <td><img src="images/m_g4.png" class="img-fluid" id="mg4"></td>
+                    <td><img src="images/m_h4.png" class="img-fluid" id="mh4"></td>
+                    <td></td>
+                    <td><img src="images/m_j4.png" class="img-fluid" id="mj4"></td>
+                    <td><img src="images/m_k4.png" class="img-fluid" id="mk4"></td>
+                    <td><img src="images/m_l4.png" class="img-fluid" id="ml4"></td>
                     <td></td>
                 </tr>
             </tbody>
