Added DLC class - Dronemaster, complete content

--- a/v.html
+++ b/v.html
@@ -20,7 +20,7 @@
             <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcan" aria-controls="offcanvasExample">
                 <div class="navbar-toggler-icon"></div>
             </button>
-            <div class="navbar-brand ms-5">FIXER</div>
+            <div class="navbar-brand ms-5">VANGUARD</div>
         </div>
     </nav>
 
@@ -65,63 +65,63 @@
         <table class="table table-borderless overflow-x-auto">
             <tbody>
                 <tr>
-                    <td><img src="images/f_a1.png" class="img-fluid" id="fa1"></td>
-                    <td><img src="images/f_b1.png" class="img-fluid" id="fb1"></td>
-                    <td><img src="images/f_c1.png" class="img-fluid" id="fc1"></td>
-                    <td><img src="images/f_d1.png" class="img-fluid" id="fd1"></td>
-                    <td><img src="images/f_e1.png" class="img-fluid" id="fe1"></td>
-                    <td><img src="images/f_f1.png" class="img-fluid" id="ff1"></td>
-                    <td><img src="images/f_g1.png" class="img-fluid" id="fg1"></td>
-                    <td><img src="images/f_h1.png" class="img-fluid" id="fh1"></td>
-                    <td><img src="images/f_i1.png" class="img-fluid" id="fi1"></td>
-                    <td><img src="images/f_j1.png" class="img-fluid" id="fj1"></td>
-                    <td><img src="images/f_k1.png" class="img-fluid" id="fk1"></td>
-                    <td><img src="images/f_l1.png" class="img-fluid" id="fl1"></td>
-                    <td><img src="images/f_m1.png" class="img-fluid" id="fm1"></td>
+                    <td><img src="images/gs_a1.png" class="img-fluid" id="gsa1"></td>
+                    <td><img src="images/gs_b1.png" class="img-fluid" id="gsb1"></td>
+                    <td><img src="images/gs_c1.png" class="img-fluid" id="gsc1"></td>
+                    <td><img src="images/gs_d1.png" class="img-fluid" id="gsd1"></td>
+                    <td><img src="images/gs_e1.png" class="img-fluid" id="gse1"></td>
+                    <td><img src="images/gs_f1.png" class="img-fluid" id="gsf1"></td>
+                    <td><img src="images/gs_g1.png" class="img-fluid" id="gsg1"></td>
+                    <td><img src="images/gs_h1.png" class="img-fluid" id="gsh1"></td>
+                    <td><img src="images/gs_i1.png" class="img-fluid" id="gsi1"></td>
+                    <td><img src="images/gs_j1.png" class="img-fluid" id="gsj1"></td>
+                    <td><img src="images/gs_k1.png" class="img-fluid" id="gsk1"></td>
+                    <td><img src="images/gs_l1.png" class="img-fluid" id="gsl1"></td>
+                    <td><img src="images/gs_m1.png" class="img-fluid" id="gsm1"></td>
                 </tr>
                 <tr>
-                    <td><img src="images/f_a2.png" class="img-fluid" id="fa2"></td>
-                    <td><img src="images/f_b2.png" class="img-fluid" id="fb2"></td>
-                    <td><img src="images/f_c2.png" class="img-fluid" id="fc2"></td>
-                    <td><img src="images/f_d2.png" class="img-fluid" id="fd2"></td>
-                    <td><img src="images/f_e2.png" class="img-fluid" id="fe2"></td>
-                    <td><img src="images/f_f2.png" class="img-fluid" id="ff2"></td>
-                    <td><img src="images/f_g2.png" class="img-fluid" id="fg2"></td>
-                    <td><img src="images/f_h2.png" class="img-fluid" id="fh2"></td>
-                    <td><img src="images/f_i2.png" class="img-fluid" id="fi2"></td>
-                    <td><img src="images/f_j2.png" class="img-fluid" id="fj2"></td>
-                    <td><img src="images/f_k2.png" class="img-fluid" id="fk2"></td>
-                    <td><img src="images/f_l2.png" class="img-fluid" id="fl2"></td>
-                    <td><img src="images/f_m2.png" class="img-fluid" id="fm2"></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td><img src="images/f_b3.png" class="img-fluid" id="fb3"></td>
-                    <td><img src="images/f_c3.png" class="img-fluid" id="fc3"></td>
-                    <td><img src="images/f_d3.png" class="img-fluid" id="fd3"></td>
-                    <td></td>
-                    <td><img src="images/f_f3.png" class="img-fluid" id="ff3"></td>
-                    <td><img src="images/f_g3.png" class="img-fluid" id="fg3"></td>
-                    <td><img src="images/f_h3.png" class="img-fluid" id="fh3"></td>
-                    <td></td>
-                    <td><img src="images/f_j3.png" class="img-fluid" id="fj3"></td>
-                    <td><img src="images/f_k3.png" class="img-fluid" id="fk3"></td>
-                    <td><img src="images/f_l3.png" class="img-fluid" id="fl3"></td>
-                    <td></td>
+                    <td><img src="images/gs_a2.png" class="img-fluid" id="gsa2"></td>
+                    <td><img src="images/gs_b2.png" class="img-fluid" id="gsb2"></td>
+                    <td><img src="images/gs_c2.png" class="img-fluid" id="gsc2"></td>
+                    <td><img src="images/gs_d2.png" class="img-fluid" id="gsd2"></td>
+                    <td><img src="images/gs_e2.png" class="img-fluid" id="gse2"></td>
+                    <td><img src="images/gs_f2.png" class="img-fluid" id="gsf2"></td>
+                    <td><img src="images/gs_g2.png" class="img-fluid" id="gsg2"></td>
+                    <td><img src="images/gs_h2.png" class="img-fluid" id="gsh2"></td>
+                    <td><img src="images/gs_i2.png" class="img-fluid" id="gsi2"></td>
+                    <td><img src="images/gs_j2.png" class="img-fluid" id="gsj2"></td>
+                    <td><img src="images/gs_k2.png" class="img-fluid" id="gsk2"></td>
+                    <td><img src="images/gs_l2.png" class="img-fluid" id="gsl2"></td>
+                    <td><img src="images/gs_m2.png" class="img-fluid" id="gsm2"></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><img src="images/f_b4.png" class="img-fluid" id="fb4"></td>
-                    <td><img src="images/f_c4.png" class="img-fluid" id="fc4"></td>
-                    <td><img src="images/f_d4.png" class="img-fluid" id="fd4"></td>
+                    <td><img src="images/gs_b3.png" class="img-fluid" id="gsb3"></td>
+                    <td><img src="images/gs_c3.png" class="img-fluid" id="gsc3"></td>
+                    <td><img src="images/gs_d3.png" class="img-fluid" id="gsd3"></td>
                     <td></td>
-                    <td><img src="images/f_f4.png" class="img-fluid" id="ff4"></td>
-                    <td><img src="images/f_g4.png" class="img-fluid" id="fg4"></td>
-                    <td><img src="images/f_h4.png" class="img-fluid" id="fh4"></td>
+                    <td><img src="images/gs_f3.png" class="img-fluid" id="gsf3"></td>
+                    <td><img src="images/gs_g3.png" class="img-fluid" id="gsg3"></td>
+                    <td><img src="images/gs_h3.png" class="img-fluid" id="gsh3"></td>
                     <td></td>
-                    <td><img src="images/f_j4.png" class="img-fluid" id="fj4"></td>
-                    <td><img src="images/f_k4.png" class="img-fluid" id="fk4"></td>
-                    <td><img src="images/f_l4.png" class="img-fluid" id="fl4"></td>
+                    <td><img src="images/gs_j3.png" class="img-fluid" id="gsj3"></td>
+                    <td><img src="images/gs_k3.png" class="img-fluid" id="gsk3"></td>
+                    <td><img src="images/gs_l3.png" class="img-fluid" id="gsl3"></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><img src="images/gs_b4.png" class="img-fluid" id="gsb4"></td>
+                    <td><img src="images/gs_c4.png" class="img-fluid" id="gsc4"></td>
+                    <td><img src="images/gs_d4.png" class="img-fluid" id="gsd4"></td>
+                    <td></td>
+                    <td><img src="images/gs_f4.png" class="img-fluid" id="gsf4"></td>
+                    <td><img src="images/gs_g4.png" class="img-fluid" id="gsg4"></td>
+                    <td><img src="images/gs_h4.png" class="img-fluid" id="gsh4"></td>
+                    <td></td>
+                    <td><img src="images/gs_j4.png" class="img-fluid" id="gsj4"></td>
+                    <td><img src="images/gs_k4.png" class="img-fluid" id="gsk4"></td>
+                    <td><img src="images/gs_l4.png" class="img-fluid" id="gsl4"></td>
                     <td></td>
                 </tr>
             </tbody>
