--- a/dm.html
+++ b/dm.html
@@ -20,7 +20,7 @@
             <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcan" aria-controls="offcanvasExample">
                 <div class="navbar-toggler-icon"></div>
             </button>
-            <div class="navbar-brand ms-5">FIXER</div>
+            <div class="navbar-brand ms-5">DRONEMASTER</div>
         </div>
     </nav>
 
@@ -65,63 +65,63 @@
         <table class="table table-borderless overflow-x-auto">
             <tbody>
                 <tr>
-                    <td><img src="images/f_a1.png" class="img-fluid" id="fa1"></td>
-                    <td><img src="images/f_b1.png" class="img-fluid" id="fb1"></td>
-                    <td><img src="images/f_c1.png" class="img-fluid" id="fc1"></td>
-                    <td><img src="images/f_d1.png" class="img-fluid" id="fd1"></td>
-                    <td><img src="images/f_e1.png" class="img-fluid" id="fe1"></td>
-                    <td><img src="images/f_f1.png" class="img-fluid" id="ff1"></td>
-                    <td><img src="images/f_g1.png" class="img-fluid" id="fg1"></td>
-                    <td><img src="images/f_h1.png" class="img-fluid" id="fh1"></td>
-                    <td><img src="images/f_i1.png" class="img-fluid" id="fi1"></td>
-                    <td><img src="images/f_j1.png" class="img-fluid" id="fj1"></td>
-                    <td><img src="images/f_k1.png" class="img-fluid" id="fk1"></td>
-                    <td><img src="images/f_l1.png" class="img-fluid" id="fl1"></td>
-                    <td><img src="images/f_m1.png" class="img-fluid" id="fm1"></td>
+                    <td><img src="images/dm_a1.png" class="img-fluid" id="dma1"></td>
+                    <td><img src="images/dm_b1.png" class="img-fluid" id="dmb1"></td>
+                    <td><img src="images/dm_c1.png" class="img-fluid" id="dmc1"></td>
+                    <td><img src="images/dm_d1.png" class="img-fluid" id="dmd1"></td>
+                    <td><img src="images/dm_e1.png" class="img-fluid" id="dme1"></td>
+                    <td><img src="images/dm_f1.png" class="img-fluid" id="dmf1"></td>
+                    <td><img src="images/dm_g1.png" class="img-fluid" id="dmg1"></td>
+                    <td><img src="images/dm_h1.png" class="img-fluid" id="dmh1"></td>
+                    <td><img src="images/dm_i1.png" class="img-fluid" id="dmi1"></td>
+                    <td><img src="images/dm_j1.png" class="img-fluid" id="dmj1"></td>
+                    <td><img src="images/dm_k1.png" class="img-fluid" id="dmk1"></td>
+                    <td><img src="images/dm_l1.png" class="img-fluid" id="dml1"></td>
+                    <td><img src="images/dm_m1.png" class="img-fluid" id="dmm1"></td>
                 </tr>
                 <tr>
-                    <td><img src="images/f_a2.png" class="img-fluid" id="fa2"></td>
-                    <td><img src="images/f_b2.png" class="img-fluid" id="fb2"></td>
-                    <td><img src="images/f_c2.png" class="img-fluid" id="fc2"></td>
-                    <td><img src="images/f_d2.png" class="img-fluid" id="fd2"></td>
-                    <td><img src="images/f_e2.png" class="img-fluid" id="fe2"></td>
-                    <td><img src="images/f_f2.png" class="img-fluid" id="ff2"></td>
-                    <td><img src="images/f_g2.png" class="img-fluid" id="fg2"></td>
-                    <td><img src="images/f_h2.png" class="img-fluid" id="fh2"></td>
-                    <td><img src="images/f_i2.png" class="img-fluid" id="fi2"></td>
-                    <td><img src="images/f_j2.png" class="img-fluid" id="fj2"></td>
-                    <td><img src="images/f_k2.png" class="img-fluid" id="fk2"></td>
-                    <td><img src="images/f_l2.png" class="img-fluid" id="fl2"></td>
-                    <td><img src="images/f_m2.png" class="img-fluid" id="fm2"></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td><img src="images/f_b3.png" class="img-fluid" id="fb3"></td>
-                    <td><img src="images/f_c3.png" class="img-fluid" id="fc3"></td>
-                    <td><img src="images/f_d3.png" class="img-fluid" id="fd3"></td>
-                    <td></td>
-                    <td><img src="images/f_f3.png" class="img-fluid" id="ff3"></td>
-                    <td><img src="images/f_g3.png" class="img-fluid" id="fg3"></td>
-                    <td><img src="images/f_h3.png" class="img-fluid" id="fh3"></td>
-                    <td></td>
-                    <td><img src="images/f_j3.png" class="img-fluid" id="fj3"></td>
-                    <td><img src="images/f_k3.png" class="img-fluid" id="fk3"></td>
-                    <td><img src="images/f_l3.png" class="img-fluid" id="fl3"></td>
-                    <td></td>
+                    <td><img src="images/dm_a2.png" class="img-fluid" id="dma2"></td>
+                    <td><img src="images/dm_b2.png" class="img-fluid" id="dmb2"></td>
+                    <td><img src="images/dm_c2.png" class="img-fluid" id="dmc2"></td>
+                    <td><img src="images/dm_d2.png" class="img-fluid" id="dmd2"></td>
+                    <td><img src="images/dm_e2.png" class="img-fluid" id="dme2"></td>
+                    <td><img src="images/dm_f2.png" class="img-fluid" id="dmf2"></td>
+                    <td><img src="images/dm_g2.png" class="img-fluid" id="dmg2"></td>
+                    <td><img src="images/dm_h2.png" class="img-fluid" id="dmh2"></td>
+                    <td><img src="images/dm_i2.png" class="img-fluid" id="dmi2"></td>
+                    <td><img src="images/dm_j2.png" class="img-fluid" id="dmj2"></td>
+                    <td><img src="images/dm_k2.png" class="img-fluid" id="dmk2"></td>
+                    <td><img src="images/dm_l2.png" class="img-fluid" id="dml2"></td>
+                    <td><img src="images/dm_m2.png" class="img-fluid" id="dmm2"></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><img src="images/f_b4.png" class="img-fluid" id="fb4"></td>
-                    <td><img src="images/f_c4.png" class="img-fluid" id="fc4"></td>
-                    <td><img src="images/f_d4.png" class="img-fluid" id="fd4"></td>
+                    <td><img src="images/dm_b3.png" class="img-fluid" id="dmb3"></td>
+                    <td><img src="images/dm_c3.png" class="img-fluid" id="dmc3"></td>
+                    <td><img src="images/dm_d3.png" class="img-fluid" id="dmd3"></td>
                     <td></td>
-                    <td><img src="images/f_f4.png" class="img-fluid" id="ff4"></td>
-                    <td><img src="images/f_g4.png" class="img-fluid" id="fg4"></td>
-                    <td><img src="images/f_h4.png" class="img-fluid" id="fh4"></td>
+                    <td><img src="images/dm_f3.png" class="img-fluid" id="dmf3"></td>
+                    <td><img src="images/dm_g3.png" class="img-fluid" id="dmg3"></td>
+                    <td><img src="images/dm_h3.png" class="img-fluid" id="dmh3"></td>
                     <td></td>
-                    <td><img src="images/f_j4.png" class="img-fluid" id="fj4"></td>
-                    <td><img src="images/f_k4.png" class="img-fluid" id="fk4"></td>
-                    <td><img src="images/f_l4.png" class="img-fluid" id="fl4"></td>
+                    <td><img src="images/dm_j3.png" class="img-fluid" id="dmj3"></td>
+                    <td><img src="images/dm_k3.png" class="img-fluid" id="dmk3"></td>
+                    <td><img src="images/dm_l3.png" class="img-fluid" id="dml3"></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><img src="images/dm_b4.png" class="img-fluid" id="dmb4"></td>
+                    <td><img src="images/dm_c4.png" class="img-fluid" id="dmc4"></td>
+                    <td><img src="images/dm_d4.png" class="img-fluid" id="dmd4"></td>
+                    <td></td>
+                    <td><img src="images/dm_f4.png" class="img-fluid" id="dmf4"></td>
+                    <td><img src="images/dm_g4.png" class="img-fluid" id="dmg4"></td>
+                    <td><img src="images/dm_h4.png" class="img-fluid" id="dmh4"></td>
+                    <td></td>
+                    <td><img src="images/dm_j4.png" class="img-fluid" id="dmj4"></td>
+                    <td><img src="images/dm_k4.png" class="img-fluid" id="dmk4"></td>
+                    <td><img src="images/dm_l4.png" class="img-fluid" id="dml4"></td>
                     <td></td>
                 </tr>
             </tbody>
@@ -147,6 +147,7 @@
             <li class="nav-item"><a href="v.html" class="nav-link text-light p-2"><img src="./images/vg_icon.png" alt="VANGUARD"></a></li>
         </ul>
         <p class="text-center text-light mb-0">© 2023 CapriceYuri</p>
+    </footer>
     </footer>
 
 </body>
