--- a/m.html
+++ b/m.html
@@ -45,16 +45,16 @@
                     <a class="nav-link" href="f.html"><i class="fa-solid fa-screwdriver-wrench"></i> Fixer</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fa-solid fa-scissors"></i> Slasher</a>
+                    <a class="nav-link" href="s.html"><i class="fa-solid fa-scissors"></i> Slasher</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fa-solid fa-mask"></i> Exterminator</a>
+                    <a class="nav-link" href="ex.html"><i class="fa-solid fa-mask"></i> Exterminator</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fa-solid fa-robot"></i> Drone Master</a>
+                    <a class="nav-link" href="dm.html"><i class="fa-solid fa-robot"></i> Drone Master</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fa-solid fa-shield-halved"></i> Vanguard</a>
+                    <a class="nav-link" href="v.html"><i class="fa-solid fa-shield-halved"></i> Vanguard</a>
                 </li>
             </ul>
         </div>
@@ -136,15 +136,15 @@
     </div>
 
     <footer class="my-2">
-        <ul class="nav justify-content-center my-2">
+        <ul class="nav justify-content-center mt-2">
             <li class="nav-item"><a href="index.html" class="nav-link text-light p-2"><img src="./images/gs_icon.png" alt="GUNSLINGER"></a></li>
             <li class="nav-item"><a href="hr.html" class="nav-link text-light p-2"><img src="./images/hr_icon.png" alt="HELLRAISER"></a></li>
             <li class="nav-item"><a href="m.html" class="nav-link text-light p-2"><img src="./images/m_icon.png" alt="MEDIC"></a></li>
             <li class="nav-item"><a href="f.html" class="nav-link text-light p-2"><img src="./images/f_icon.png" alt="FIXER"></a></li>
-            <li class="nav-item"><a href="#" class="nav-link text-light p-2"><img src="./images/s_icon.png" alt="SLASHER"></a></li>
-            <li class="nav-item"><a href="#" class="nav-link text-light p-2"><img src="./images/ex_icon.png" alt="EXTERMINATOR"></a></li>
-            <li class="nav-item"><a href="#" class="nav-link text-light p-2"><img src="./images/dm_icon.png" alt="DRONEMASTER"></a></li>
-            <li class="nav-item"><a href="#" class="nav-link text-light p-2"><img src="./images/vg_icon.png" alt="VANGUARD"></a></li>
+            <li class="nav-item"><a href="s.html" class="nav-link text-light p-2"><img src="./images/s_icon.png" alt="SLASHER"></a></li>
+            <li class="nav-item"><a href="ex.html" class="nav-link text-light p-2"><img src="./images/ex_icon.png" alt="EXTERMINATOR"></a></li>
+            <li class="nav-item"><a href="dm.html" class="nav-link text-light p-2"><img src="./images/dm_icon.png" alt="DRONEMASTER"></a></li>
+            <li class="nav-item"><a href="v.html" class="nav-link text-light p-2"><img src="./images/vg_icon.png" alt="VANGUARD"></a></li>
         </ul>
         <p class="text-center text-light mb-0">© 2023 CapriceYuri</p>
     </footer>
