Initialize new pages

--- a/ex.html
+++ b/ex.html
@@ -16,11 +16,16 @@
 <body>
     <!-- NAV Bar -->
     <nav class="navbar bg-dark">
-        <div class="container navbar-dark justify-content-start">
+        <div class="container navbar-dark justify-content-center">
             <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcan" aria-controls="offcanvasExample">
                 <div class="navbar-toggler-icon"></div>
             </button>
-            <div class="navbar-brand ms-5">EXTERMINATOR</div>
+            <div>
+                <div class="navbar-brand mx-5">EXTERMINATOR</div>
+            </div>
+            <div>
+                <div class="btn btn-secondary"><i class="fa-solid fa-arrow-right-to-bracket fa-flip-vertical fa-lg"></i></div>
+            </div>
         </div>
     </nav>
 
