Added complete melees

--- a/weapon_pages/weapon.html
+++ b/weapon_pages/weapon.html
@@ -326,6 +326,155 @@
         </div>
     </div>
 
+    <!-- Code DIVISON -->
+
+    <div class="container mt-5">
+        <div class="text-center">
+            <hi class="display-5 fst-italic text-white font-monospace">LIGHT MELEE</hi>
+        </div>
+        <div class="row p-5">
+            <div class="col-md-4 col-6 ">
+                <div class="card border-0">
+                    <img src="/images/knives.jpeg" class="card-img-top">
+                    <div class="card-body text-center">
+                        <small class="card-title text-light">Dual Knives</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-6 ">
+                <div class="card border-0">
+                    <img src="/images/sickles.jpeg" class="card-img-top">
+                    <div class="card-body text-center">
+                        <small class="card-title text-light">Dual Sickles</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-6 ">
+                <div class="card border-0">
+                    <img src="/images/cleaver.jpeg" class="card-img-top">
+                    <div class="card-body text-center">
+                        <small class="card-title text-light">Duel Cleavers</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-6 ">
+                <div class="card border-0">
+                    <img src="/images/sai.jpeg" class="card-img-top">
+                    <div class="card-body text-center">
+                        <small class="card-title text-light">Dual Sai</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Code DIVISON -->
+
+    <div class="container mt-5">
+        <div class="text-center">
+            <hi class="display-5 fst-italic text-white font-monospace">MEDIUM MELEE</hi>
+        </div>
+        <div class="row p-5">
+            <div class="col-md-4 col-6 ">
+                <div class="card border-0">
+                    <img src="/images/machete.jpeg" class="card-img-top">
+                    <div class="card-body text-center">
+                        <small class="card-title text-light">Machete</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-6 ">
+                <div class="card border-0">
+                    <img src="/images/katana.jpeg" class="card-img-top">
+                    <div class="card-body text-center">
+                        <small class="card-title text-light">Wakizashi</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-6 ">
+                <div class="card border-0">
+                    <img src="/images/lobo.jpeg" class="card-img-top">
+                    <div class="card-body text-center">
+                        <small class="card-title text-light">Lobo</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-6 ">
+                <div class="card border-0">
+                    <img src="/images/tomahawk.jpeg" class="card-img-top">
+                    <div class="card-body text-center">
+                        <small class="card-title text-light">Tomahawk</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-6 ">
+                <div class="card border-0">
+                    <img src="/images/hammer.jpeg" class="card-img-top">
+                    <div class="card-body text-center">
+                        <small class="card-title text-light">Hammer</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-6 ">
+                <div class="card border-0">
+                    <img src="/images/fireAxe.jpeg" class="card-img-top">
+                    <div class="card-body text-center">
+                        <small class="card-title text-light">Fire Axe</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-6 ">
+                <div class="card border-0">
+                    <img src="/images/baton.jpeg" class="card-img-top">
+                    <div class="card-body text-center">
+                        <small class="card-title text-light">Baton</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Code DIVISON -->
+
+    <div class="container mt-5">
+        <div class="text-center">
+            <hi class="display-5 fst-italic text-white font-monospace">HEAVY MELEE</hi>
+        </div>
+        <div class="row p-5">
+            <div class="col-md-4 col-6 ">
+                <div class="card border-0">
+                    <img src="/images/heavyFire.jpeg" class="card-img-top">
+                    <div class="card-body text-center">
+                        <small class="card-title text-light">Heavy Fire Axe</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-6 ">
+                <div class="card border-0">
+                    <img src="/images/bat.jpeg" class="card-img-top">
+                    <div class="card-body text-center">
+                        <small class="card-title text-light">Baseball Bat</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-6 ">
+                <div class="card border-0">
+                    <img src="/images/sword.jpeg" class="card-img-top">
+                    <div class="card-body text-center">
+                        <small class="card-title text-light">Sword</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-6 ">
+                <div class="card border-0">
+                    <img src="/images/sledge.jpeg" class="card-img-top">
+                    <div class="card-body text-center">
+                        <small class="card-title text-light">Sledgehammer</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
